# Pgm

./: Dockerfile  ProjectInfo.txt  RunPgm.bat
PgmAverageApp/: CMakeLists.txt  PgmAverageApp.cpp  PgmAverageAppTest.cpp  TestPgmFile.txt
PgmAverageApp/include/model/: PgmAverageImage.h  PgmImage.h  PgmImageHeader.h
PgmAverageApp/include/reader/: PgmImageReader.h
PgmAverageApp/include/writer/: PgmImageWriter.h
PgmAverageApp/src/model/: PgmAverageImage.cpp  PgmImage.cpp  PgmImageHeader.cpp
PgmAverageApp/src/reader/: PgmImageReader.cpp
PgmAverageApp/src/writer/: PgmImageWriter.cpp
